Add sections with ids

--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>YellowGreen</title>
+</head>
+<body>
+    <header>
+        <nav>
 
+        </nav>
+        <section id="our-values"></section>
+        <section id="what-we-do"></section>
+        <section id="formulaire"></section>
+        <section id="they-trust-us"></section>
+        <section id="about-us"></section>
+
+    </header>
+    <footer>
+
+    </footer>
+</body>
+</html>
