--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 <body>
     <header>
         <nav>
+            <ul>
+                <li>Home</li>
+                <li>About Us</li>
+                <li>Galery</li>
+                <li>Contact Us</li>
+            </ul>
 
         </nav>
     </header>
