Editing the html nav & footer section

--- a/index.html
+++ b/index.html
@@ -17,8 +17,38 @@
     <section id="formulaire"></section>
     <section id="they-trust-us"></section>
     <section id="about-us"></section>
-    
+
+    <div class="about">
+        <h3>About Us</h3>
+        <section> Contact </section>
+        <section> Where to find us </section>        
+    </div>
     <footer>
+        </div>
+        <div class="footer">
+            <ul> 
+                <li>
+                    <ul>
+                        <li>About us</li>
+                        <li>fellows</li>
+                        <li>Joint our Army</li>
+                    </ul>
+                <li>
+                    <ul>
+                        <li>FAQ</li>
+                        <li>Reward condition</li>
+                        <li>Legal mention</li>
+                    </ul>
+                </li>
+                    <li class="third">
+                        <ul>
+                            <li>Sauron4ever.com</li>
+                            <li>follow him</li>
+                        </ul>
+                    </li>
+            </ul>
+        </div>  
+
 
     </footer>
 </body>
