--- a/index.html
+++ b/index.html
@@ -15,7 +15,24 @@
     
     <section id="our-values"></section>
     <section id="what-we-do"></section>
-    <section id="formulaire"></section>
+
+    <section id="formulaire">
+        <h2></h2>
+        <form>
+            <input class="mail_and_phone" type="email" placeholder="@">
+            <input class="mail_and_phone" type="phone" placeholder="ex: 03 12 34 56 78">
+            <select id="category" name="category">
+                <option value="quote">I need a quote:</option>
+                <option value="questions">I have questions concerning your values:</option>
+                <option value="questions">I have questions concerning your delays:</option>
+                <option value="questions">I have questions concerning ... :</option>
+                <option value="other">Other:</option>
+            </select>
+            <textarea placeholder="Your message"></textarea>
+            <input id="send" type="submit" value="Send !">
+        </form>
+    </section>
+
     <section id="they-trust-us"></section>
     <section id="about-us"></section>
     
