add 2nd try formulaire

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section id="what-we-do"></section>
 
     <section id="formulaire">
-        <h2></h2>
+        <h2>Feel free to contact us !</h2>
         <form>
             <input class="mail_and_phone" type="email" placeholder="@">
             <input class="mail_and_phone" type="phone" placeholder="ex: 03 12 34 56 78">
@@ -37,6 +37,7 @@
             <textarea placeholder="Your message"></textarea>
             <input id="send" type="submit" value="Send !">
         </form>
+        <p>We will answer you as quickly as we can !</p>
     </section>
 
     <section id="they-trust-us"></section>
