--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
     <section id="our-values"></section>
     <section id="what-we-do"></section>
 
+    <!-- Formulaire RoxaneDrelon -->
+
     <section id="formulaire">
         <h2>Feel free to contact us !</h2>
+        <!-- h2 en dehors du form -->
         <form>
             <input class="mail_and_phone" type="email" placeholder="@">
             <input class="mail_and_phone" type="phone" placeholder="ex: 03 12 34 56 78">
@@ -37,7 +40,9 @@
             <textarea placeholder="Your message"></textarea>
             <input id="send" type="submit" value="Send !">
         </form>
+        <!-- form très proche de FindThePrecious -->
         <p>We will answer you as quickly as we can !</p>
+        <!-- des idées pour enrichir cette section ? -->
     </section>
 
     <section id="they-trust-us"></section>
