Update wwd section

--- a/index.html
+++ b/index.html
@@ -20,13 +20,22 @@
     </header>
     
     <section id="our-values"></section>
-    
+
     <section id="what-we-do">
         <h2>What we do</h2>
         <ul class="wwd-container">
-            <li class="wwd-item"><h3 class="wwd-title">Web</h3><article></article></li>
-            <li class="wwd-item"><h3 class="wwd-title">Print</h3><article></article></li>
-            <li class="wwd-item"><h3 class="wwd-title">Visual Identity</h3><article></article></li>
+            <li class="wwd-item">
+                <h3 class="wwd-title">Web</h3>
+                <img src="" alt="">
+                <article></article></li>
+            <li class="wwd-item">
+                <h3 class="wwd-title">Print</h3>
+                <img src="" alt="">
+                <article></article></li>
+            <li class="wwd-item">
+                <h3 class="wwd-title">Marking campaigns</h3>
+                <img src="" alt="">
+                <article></article></li>
         </ul>
     </section>
 
