change section name galery to slideshow

--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
 
         </nav>
     </header>
-<<<<<<< HEAD
 
-    <!--SECTION GALERY OUR VALUES /// MARGAUX-->
+    <!--SECTION SLIDESHOW OUR VALUES /// MARGAUX-->
     <section id="our-values">
         <!-- Slideshow container -->
         <div class="slideshow-container">
@@ -60,7 +59,6 @@
 
     <section id="what-we-do"></section>
     <section id="formulaire"></section>
-=======
     
     <section id="our-values"></section>
 
@@ -105,7 +103,6 @@
         <!-- des idées pour enrichir cette section ? -->
     </section>
 
->>>>>>> 00b601db3a4964dc7fe61856a34f861b464e2789
     <section id="they-trust-us"></section>
     <section id="about-us"></section>
 
