--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <h1>YellowGreen</h1>
         <nav>
-            <ul>
+            <ul class="ulheader">
                 <li>Home</li>
                 <li>About Us</li>
                 <li>Galery</li>
