--- a/index.html
+++ b/index.html
@@ -101,25 +101,28 @@
         </form>
         <!-- form très proche de FindThePrecious -->
         <p>We will answer you as quickly as we can !</p>
-        <!-- des idées pour enrichir cette section ? -->
     </section>
 
     <section id="they-trust-us"></section>
+    <!-- About us Liora -->
     <section id="about-us"></section>
-
-    <div class="aboutus">
         <h3>About Us</h3>
-        <section> Map</section>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2530.695706705888!2d3.0155905509948737!3d50.632769379400365!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c2d55ba8fa59e1%3A0xb2d48e50b58f28db!2s4%20Avenue%20des%20Saules%2C%2059160%20Lille!5e0!3m2!1sfr!2sfr!4v1583761177665!5m2!1sfr!2sfr" 
-        width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-        <!-- intégrer la map de notre adresse via google maps-->
-        <article>Our address</article>
-            <p>4 avenue des saules 59160 Lomme-Lille</p>
-        <article>Our phone</article>
-            <p>+33 34 56 78 90</p>  
-        <input class="team" type="button" value="Our team">
-
-    </div>
+        <!-- Map -->
+        <div class="aboutus">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2530.695706705888!2d3.0155905509948737!3d50.632769379400365!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c2d55ba8fa59e1%3A0xb2d48e50b58f28db!2s4%20Avenue%20des%20Saules%2C%2059160%20Lille!5e0!3m2!1sfr!2sfr!4v1583761177665!5m2!1sfr!2sfr" 
+        frameborder="0" style="border:0;" allowfullscreen="">
+            </iframe>
+        <!-- Fin iframe Map-->
+            <div class="aboutbox">
+                <article>Our address</article>
+                    <p>4 avenue des saules 59160 Lomme-Lille</p>
+                <article>Our phone</article>
+                    <p>+33 34 56 78 90</p>  
+            </div>
+        </div>
+        <div class="button">
+            <input class="team" type="button" value="Our team">
+        </div>
     <footer>
         </div>
         <div class="footer">
@@ -127,26 +130,24 @@
                 <li>
                     <ul>
                         <li>About us</li>
-                        <li>fellows</li>
-                        <li>Joint our Army</li>
+                        <li>Our missions</li>
+                        <li>Contact</li>
                     </ul>
                 <li>
                     <ul>
                         <li>FAQ</li>
-                        <li>Reward condition</li>
+                        <li>Social</li>
                         <li>Legal mention</li>
                     </ul>
                 </li>
-                    <li class="third">
+                    <li>
                         <ul>
-                            <li>Sauron4ever.com</li>
-                            <li>follow him</li>
+                            <li>Achievements</li>
+                            <li>follow us</li>
                         </ul>
                     </li>
             </ul>
         </div>  
-
-
     </footer>
 </body>
 </html>
