about us modifications

--- a/index.html
+++ b/index.html
@@ -121,9 +121,10 @@
                     <p>+33 34 56 78 90</p>  
             </div>
         </div>
-        <div class="button">
+        <div class="buttonteam">
             <input class="team" type="button" value="Our team">
         </div>
+    </div>
     <footer>
         </div>
         <div class="footer">
