commentaries for form are now in english

--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
             </ul>
         </section>
 
-    <!-- Formulaire RoxaneDrelon -->
+    <!-- Form RoxaneDrelon -->
 
         <section id="formulaire">
             <h2>Feel free to contact us !</h2>
-            <!-- h2 en dehors du form -->
+            <!-- <h2> outside of <form> -->
             <form>
                 <label>Your Email:</label><input class="mail_and_phone" type="email" placeholder="@">
                 <label>Your phone:</label><input class="mail_and_phone" type="phone" placeholder="ex: 03 12 34 56 78">
@@ -95,7 +95,7 @@
                 <textarea placeholder="Your message"></textarea>
                 <input id="send" type="submit" value="Send !">
             </form>
-            <!-- form très proche de FindThePrecious -->
+            <!-- <form> looks like the "FindThePrecious" one-->
             <p>We will answer you as quickly as we can !</p>
         </section>
 
