Fix html About us section

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <link href="https://fonts.googleapis.com/css?family=Oswald|Pacifico&display=swap" rel="stylesheet">
     <title>YellowGreen</title>
 </head>
+
 <script type="text/javascript" src="script.js"></script>
+
 <body>
     <header>
         <h1>YellowGreen</h1>
@@ -87,12 +89,11 @@
             <p>We will answer you as quickly as we can !</p>
         </section>
 
-        <section id="they-trust-us"></section>
-
     <section id="they-trust-us"></section>
+
     <!-- About us Liora -->
     
-    <section id="about-us"></section>
+    <section id="about-us">
         <h3>About Us</h3>
         <!-- Map -->
         <div class="aboutus">
@@ -102,15 +103,16 @@
         <!-- Fin iframe Map-->
             <div class="aboutbox">
                 <article>Our address</article>
-                    <p>4 avenue des saules 59160 Lomme-Lille</p>
+                <p>4 avenue des saules 59160 Lomme-Lille</p>
                 <article>Our phone</article>
-                    <p>+33 34 56 78 90</p>  
+                <p>+33 34 56 78 90</p>  
             </div>
         </div>
         <div class="buttonteam">
             <input class="team" type="button" value="Our team">
         </div>
-    </div>
+    </section>
+
     <footer>
         </div>
         <div class="footer">
