third css form commit

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <option value="questions">I have questions concerning ... :</option>
                     <option value="other">Other:</option>
                 </select>
-                <textarea placeholder="Your message"></textarea>
+                <textarea placeholder="Your message" rows="10" cols="50"></textarea>
                 <input id="send" type="submit" value="Send !">
             </form>
             
