Update what-we-do section

--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <link rel="stylesheet" href="reset.css">
     <!-- reset.css cancels browser's default CSS" -->
     <link rel="stylesheet" href="style.css">
-    <!--Pacifico font h1 h2 /Oswald regular-->
-    <link href="https://fonts.googleapis.com/css?family=Oswald|Pacifico&display=swap" rel="stylesheet">
     <title>YellowGreen</title>
 </head>
 <script type="text/javascript" src="script.js"></script>
@@ -52,16 +50,16 @@
             <ul class="wwd-container">
                 <li class="wwd-item">
                     <h3 class="wwd-title">Web</h3>
-                    <img src="" alt="">
-                    <article></article></li>
+                    <img src="Images/what-we-do-web" alt="">
+                  <article><p>Lorem</p></article></li>
                 <li class="wwd-item">
                     <h3 class="wwd-title">Print</h3>
-                    <img src="" alt="">
-                    <article></article></li>
+                    <img src="Images/what-we-do-print" alt="">
+                    <article><p>Lorem</p></article></li>
                 <li class="wwd-item">
                     <h3 class="wwd-title">Marking campaigns</h3>
-                    <img src="" alt="">
-                    <article></article></li>
+                    <img src="Images/what-we-do-marking-campaigns" alt="">
+                    <article><p>Lorem</p></article></li>
             </ul>
         </section>
 
