modif css header

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <script type="text/javascript" src="script.js"></script>
 <body>
     <header>
-        <h1>YellowGreen</h1>
+            <h1 class="titreh1"><span class="spanY">Y</span>ellowGreen</h1>
         <nav>
             <ul class="ulheader">
                 <li>Home</li>
