--- a/index.html
+++ b/index.html
@@ -28,23 +28,21 @@
     <main>
         <!--SECTION SLIDESHOW OUR VALUES /// MARGAUX-->
         <section id="our-values">
-            <!-- Slideshow container -->
+            <h2>Our Values</h2>
             <div class="slideshow-container">
-
-        <!-- Full-width images with number and caption text -->
-                <div class="mySlides fade">
-                    <img class="image" src="Images/slideshow1.jpg" style="width:100%">
-                    <div class="text">Caption Text</div>
+                <div class="mySlides img1">
+                    <h3>Eco conception</h3>
+                    <p>L'éco-conception consiste à prendre en compte l'impact environnemental de ses réalisations de l'idée jusqu'à la tombe.</p>
                 </div>
   
-                <div class="mySlides fade">
-                    <img src="Images/slideshow2.jpg" style="width:100%">
-                    <div class="text">Caption Two</div>
+                <div class="mySlides img2">
+                    <h3>Commitment</h3>
+                    <p>We work with partners who share the same values. </p>
                 </div>
     
-                <div class="mySlides fade">
-                    <img src="Images/slideshow3.jpg" style="width:100%">
-                    <div class="text">Caption Three</div>
+                <div class="mySlides img3">
+                    <h3>Co-design</h3>
+                    <p>Pour que vous soyez tout à fait à l’aise avec l’image de votre projet, prenons du temps pour poser les choses à plat et faire fuser les idées !</p>
                 </div>
             </div>    
         </section>
