--- a/index.html
+++ b/index.html
@@ -50,15 +50,15 @@
             <ul class="wwd-container">
                 <li class="wwd-item">
                     <h3 class="wwd-title">Web</h3>
-                    <img src="Images/what-we-do-web" alt="">
+                    <img src="Images/what-we-do-web" alt="a desktop with a plant">
                   <article><p>Lorem</p></article></li>
                 <li class="wwd-item">
                     <h3 class="wwd-title">Print</h3>
-                    <img src="Images/what-we-do-print" alt="">
+                    <img src="Images/what-we-do-print" alt="a flyer with a plant">
                     <article><p>Lorem</p></article></li>
                 <li class="wwd-item">
                     <h3 class="wwd-title">Marking campaigns</h3>
-                    <img src="Images/what-we-do-marking-campaigns" alt="">
+                    <img src="Images/what-we-do-marking-campaigns" alt="a card with a plant">
                     <article><p>Lorem</p></article></li>
             </ul>
         </section>
