--- a/index.html
+++ b/index.html
@@ -74,16 +74,16 @@
             
             <!-- <form> looks like the "FindThePrecious" one-->
             <form>
-                <label>Your Email:</label><input class="mail_and_phone" type="email" placeholder="@">
-                <label>Your phone:</label><input class="mail_and_phone" type="phone" placeholder="ex: 03 12 34 56 78">
-                <label>Choose a topic:</label><select id="category" name="category">
+                <label>Your Email:</label><input class="mail_and_phone borderer" type="email" placeholder="@">
+                <label>Your phone:</label><input class="mail_and_phone borderer" type="phone" placeholder="ex: 03 12 34 56 78">
+                <label>Choose a topic:</label><select class="borderer" id="category" name="category">
                     <option value="quote">I need a quote:</option>
                     <option value="questions">I have questions concerning your values:</option>
                     <option value="questions">I have questions concerning your delays:</option>
                     <option value="questions">I have questions concerning ... :</option>
                     <option value="other">Other:</option>
                 </select>
-                <textarea placeholder="Your message" rows="10" cols="50"></textarea>
+                <textarea placeholder="Your message" class="borderer" rows="10" cols="50"></textarea>
                 <input id="send" type="submit" value="Send !">
             </form>
             
