--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
             <h1 class="titreh1"><span class="spanY">Y</span>ellowGreen</h1>
         <nav>
             <ul class="ulheader">
-                <li>Home</li>
-                <li>About Us</li>
-                <li>Galery</li>
-                <li>Contact Us</li>
+                <li class="liheader">Home</li>
+                <li class="liheader">About Us</li>
+                <li class="liheader">Galery</li>
+                <li class="liheader">Contact Us</li>
             </ul>
         </nav>
     </header>
