5th css form commit

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <option value="other">Other:</option>
                 </select>
                 <textarea placeholder="Your message" class="borderer" rows="10" cols="50"></textarea>
-                <input id="send" type="submit" value="Send !">
+                <input class="borderer" id="send" type="submit" value="Send !">
             </form>
             
             <p>We will answer you as quickly as we can !</p>
