--- a/index.html
+++ b/index.html
@@ -117,21 +117,21 @@
             <ul> 
                 <li>
                     <ul>
-                        <li>About us</li>
-                        <li>Our missions</li>
-                        <li>Contact</li>
+                        <li><a href="#">About us</a></li>
+                        <li><a href="#">Our missions</a></li>
+                        <li><a href="#">Contact</a></li>
                     </ul>
                 <li>
                     <ul>
-                        <li>FAQ</li>
-                        <li>Social</li>
-                        <li>Legal mention</li>
+                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#">Social</a></li>
+                        <li><a href="#">Legal mention</a></li>
                     </ul>
                 </li>
                     <li>
                         <ul>
-                            <li>Achievements</li>
-                            <li>follow us</li>
+                            <li><a href="#">Achievements</a></li>
+                            <li><a href="#">follow us</a></li>
                         </ul>
                     </li>
             </ul>
