--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="reset.css">
     <!-- reset.css cancels browser's default CSS" -->
     <link rel="stylesheet" href="style.css">
+    <!--Pacifico font h1 h2 /Oswald regular-->
+    <link href=“https://fonts.googleapis.com/css?family=Oswald|Pacifico&display=swap” rel=“stylesheet”>
     <title>YellowGreen</title>
 </head>
 
@@ -120,30 +122,30 @@
         </div>
     </section>
     <footer>
-        </div>
-        <div class="footer">
-            <ul> 
+    </div>
+    <div class=“footer”>
+        <ul>
+            <li>
+                <ul>
+                    <li><a href=“#”>About us</a></li>
+                    <li><a href=“#”>Our missions</a></li>
+                    <li><a href=“#”>Contact</a></li>
+                </ul>
+            <li>
+                <ul>
+                    <li><a href=“#”>FAQ</a></li>
+                    <li><a href=“#”>Social</a></li>
+                    <li><a href=“#”>Legal mention</a></li>
+                </ul>
+            </li>
                 <li>
                     <ul>
-                        <li>About us</li>
-                        <li>Our missions</li>
-                        <li>Contact</li>
-                    </ul>
-                <li>
-                    <ul>
-                        <li>FAQ</li>
-                        <li>Social</li>
-                        <li>Legal mention</li>
+                        <li><a href=“#”>Achievements</a></li>
+                        <li><a href=“#”>follow us</a></li>
                     </ul>
                 </li>
-                    <li>
-                        <ul>
-                            <li>Achievements</li>
-                            <li>follow us</li>
-                        </ul>
-                    </li>
-            </ul>
-        </div>  
-    </footer>
+        </ul>
+    </div>
+</footer>
 </body>
 </html>
