--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- reset.css cancels browser's default CSS" -->
     <link rel="stylesheet" href="style.css">
     <!--Pacifico font h1 h2 /Oswald regular-->
-    <link href=“https://fonts.googleapis.com/css?family=Oswald|Pacifico&display=swap” rel=“stylesheet”>
+    <link href="https://fonts.googleapis.com/css?family=Oswald|Pacifico&display=swap" rel="stylesheet">
     <title>YellowGreen</title>
 </head>
 
