updated various font properties and input size and padding

--- a/index.html
+++ b/index.html
@@ -81,9 +81,12 @@
             
             <!-- <form> looks like the "FindThePrecious" one-->
             <form>
-                <label>Your Email:</label><input class="mail_and_phone borderer" type="email" placeholder="@">
-                <label>Your phone:</label><input class="mail_and_phone borderer" type="phone" placeholder="ex: 03 12 34 56 78">
-                <label>Choose a topic:</label><select class="borderer" id="category" name="category">
+                <label>Your Email:</label>
+                <input class="mail_and_phone borderer" type="email" placeholder="@">
+                <label>Your phone:</label>
+                <input class="mail_and_phone borderer" type="phone" placeholder="ex: 03 12 34 56 78">
+                <label>Choose a topic:</label>
+                <select class="borderer" id="category" name="category">
                     <option value="quote">I need a quote:</option>
                     <option value="questions">I have questions concerning your values:</option>
                     <option value="questions">I have questions concerning your delays:</option>
