--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
             <h1 class="titreh1"><span class="spanY">Y</span>ellowGreen</h1>
         <nav>
             <ul class="ulheader">
-                <li class="liheader">Home</li>
-                <li class="liheader">About Us</li>
-                <li class="liheader">Galery</li>
+                <li class="liheader">Ours Values</li>
                 <li class="liheader">Contact Us</li>
+                <li class="liheader">About Us</li>
             </ul>
         </nav>
     </header>
