updated multiple size variables

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <!-- <form> looks like the "FindThePrecious" one-->
             <form>
                 <label>Your Email:</label>
-                <input class="mail_and_phone borderer" type="email" placeholder="@">
+                <input class="mail_and_phone borderer" type="email" placeholder="ex: yellowgreen@yellowgreen.com">
                 <label>Your phone:</label>
                 <input class="mail_and_phone borderer" type="phone" placeholder="ex: 03 12 34 56 78">
                 <label>Choose a topic:</label>
