Css added to team's section

--- a/index.html
+++ b/index.html
@@ -111,14 +111,33 @@
             </iframe>
         <!-- Fin iframe Map-->
             <div class="aboutbox">
-                <h4>Our address</h4>
+                <div><img src="Images/pin.png"alt="pin"> Our location</div>
                     <p>4 avenue des saules 59160 Lomme-Lille</p>
-                <h4>Our phone</h4>
+                <div><img src="Images/phone.png" alt="phone"> Our phone</div>
                     <p>+33 34 56 78 90</p>
             </div>
         </div>
-        <div class="buttonteam">
-            <input class="team" type="button" value="Our team">
+        <h3>Our team</h3>
+        <div class="avatarteam">
+            
+            <div class="team">
+                <p>Liora</p>
+            </div>
+            <div class="team">
+                <p>Margaux</p>
+            </div>
+            <div class="team">
+                <p>Maxime</p>
+            </div>
+            <div class="team">
+                <p>Roxane</p>
+            </div>
+            <div class="team">
+                <p>Valentin </p>
+            </div>
+            <div class="team">
+                <p>Yann</p>
+            </div>
         </div>
     </section>
     <footer>
