pictures add on team section

--- a/index.html
+++ b/index.html
@@ -121,21 +121,27 @@
         <div class="avatarteam">
             
             <div class="team">
+                <img src="Images/girl200.png" alt="Liora">
                 <p>Liora</p>
             </div>
             <div class="team">
+                <img src="Images/girl200.png" alt="Margaux">
                 <p>Margaux</p>
             </div>
             <div class="team">
+                <img src="Images/man200.png" alt="Maxime">
                 <p>Maxime</p>
             </div>
             <div class="team">
+                <img src="Images/girl200.png" alt="Roxane">
                 <p>Roxane</p>
             </div>
             <div class="team">
+                <img src="Images/man200.png" alt="Valentin">
                 <p>Valentin </p>
             </div>
             <div class="team">
+                <img src="Images/man200.png" alt="Yann">
                 <p>Yann</p>
             </div>
         </div>
