--- a/index.html
+++ b/index.html
@@ -80,22 +80,24 @@
             
             <!-- <form> looks like the "FindThePrecious" one-->
             <form>
-                <div id="first_half_form">
-                    <label>Your Email:</label>
-                    <input class="mail_and_phone borderer" type="email" placeholder="ex: yellowgreen@yellowgreen.com">
-                    <label>Your phone:</label>
-                    <input class="mail_and_phone borderer" type="phone" placeholder="ex: 03 12 34 56 78">
-                    <label>Choose a topic:</label>
-                    <select class="borderer" id="category" name="category">
-                        <option value="quote">I need a quote:</option>
-                        <option value="questions">I have questions concerning your values:</option>
-                        <option value="questions">I have questions concerning your delays:</option>
-                        <option value="questions">I have questions concerning ... :</option>
-                        <option value="other">Other:</option>
-                    </select>
-                </div>
-                <div id="second_hald_form">
-                    <textarea placeholder="Your message" class="borderer" rows="10" cols="50"></textarea>
+                <div id="in_form">
+                    <div id="first_half_form">
+                        <label>Your Email:</label>
+                        <input class="mail_and_phone borderer" type="email" placeholder="ex: yellowgreen@yellowgreen.com">
+                        <label>Your phone:</label>
+                        <input class="mail_and_phone borderer" type="phone" placeholder="ex: 03 12 34 56 78">
+                        <label>Choose a topic:</label>
+                        <select class="borderer" id="category" name="category">
+                            <option value="quote">I need a quote:</option>
+                            <option value="questions">I have questions concerning your values:</option>
+                            <option value="questions">I have questions concerning your delays:</option>
+                            <option value="questions">I have questions concerning ... :</option>
+                            <option value="other">Other:</option>
+                        </select>
+                    </div>
+                    <div id="second_hald_form">
+                        <textarea placeholder="Your message" class="borderer" rows="10" cols="50"></textarea>
+                    </div>
                 </div>
                 <input class="borderer" id="send" type="submit" value="Send !">
             </form>
