clean flex, needs minor adjustments

--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
                             <option value="other">Other:</option>
                         </select>
                     </div>
-                    <div id="second_hald_form">
+                    <div id="second_half_form">
+                        <label>Your Message:</label>
                         <textarea placeholder="Your message" class="borderer" rows="10" cols="50"></textarea>
                     </div>
                 </div>
