--- a/index.html
+++ b/index.html
@@ -136,32 +136,32 @@
                     <p>+33 34 56 78 90</p>
             </div>
         </div>
-        <h3>Our team</h3>
+        <h2>Meet our team</h2>
         <div class="avatarteam">
             
             <div class="team">
-                <img src="Images/girl200.png" alt="Liora">
-                <p>Liora</p>
+                <img src="Images/liora.png" alt="Liora">
+                <p><img src="Images/linkedin.png" alt="linkedin">Liora</p>
             </div>
             <div class="team">
-                <img src="Images/girl200.png" alt="Margaux">
-                <p>Margaux</p>
+                <img src="Images/margaux.png" alt="Margaux">
+                <p><img src="Images/linkedin.png" alt="linkedin">Margaux</p>
             </div>
             <div class="team">
-                <img src="Images/man200.png" alt="Maxime">
-                <p>Maxime</p>
+                <img src="Images/maxime.png" alt="Maxime">
+                <p><img src="Images/linkedin.png" alt="linkedin">Maxime</p>
             </div>
             <div class="team">
-                <img src="Images/girl200.png" alt="Roxane">
-                <p>Roxane</p>
+                <img src="Images/roxane.png" alt="Roxane">
+                <p><img src="Images/linkedin.png" alt="linkedin">Roxane</p>
             </div>
             <div class="team">
-                <img src="Images/man200.png" alt="Valentin">
-                <p>Valentin </p>
+                <img src="Images/valentin.png" alt="Valentin">
+                <p><img src="Images/linkedin.png" alt="linkedin">Valentin </p>
             </div>
             <div class="team">
-                <img src="Images/man200.png" alt="Yann">
-                <p>Yann</p>
+                <img src="Images/yann.png" alt="Yann">
+                <p><img src="Images/linkedin.png" alt="linkedin">Yann</p>
             </div>
         </div>
     </section>
