switch two sections and add some-projects section

--- a/index.html
+++ b/index.html
@@ -25,6 +25,60 @@
         </ul>
     </nav>
     <main>
+         <!--SECTION WHAT WE DO /// VALENTIN-->
+         <section id="what-we-do">
+            <h2>What we do</h2>
+            <ul class="wwd-container">
+                <li class="wwd-item">
+                    <article>
+                        <h3 class="wwd-title">Web</h3>
+                        <img class="wwd-img" src="Images/coding.png" alt="a desktop with a plant">
+                        <p>A multidisciplinary and committed team to offer you that little extra that makes the difference. Thanks to the integration of all the components of creation, the communications agency La Confection has every legitimacy to become your most precious support.</p>
+                    </article>
+                </li>
+
+                <li class="wwd-item">
+                    <article>
+                        <h3 class="wwd-title">Print</h3>
+                        <img class="wwd-img" src="Images/flyer.png" alt="a flyer with a plant">
+                        <p>Promoting your image means highlighting your difference and giving meaning to your projects. The creative work should not be limited to the search for a simple aesthetic dress but must above all meet specific criteria in terms of reading, visual ergonomics and understanding to create links with your customers.</p>
+                    </article>
+                </li>
+
+                <li class="wwd-item">
+                    <article>
+                        <h3 class="wwd-title">Marking campaigns</h3>
+                        <img class="wwd-img" src="Images/marketing.png" alt="a card with a plant">
+                        <p>Communication strategy, digital and printed communication, brand content through video, e-marketing, we like to cultivate our gray matter.</p>
+                    </article>
+                </li>
+            </ul>
+        </section>
+
+        <section id="some-projects">
+            <h2>Some Projects</h2>
+            <div class="projects-container">
+                <article>
+                    <img src="Images/WildCircus1.jpg" alt="Picture of one of our project">
+                </article>
+                <article>
+                    <img src="Images/WildCircus2.jpg" alt="Picture of one of our project">
+                </article>
+                <article>
+                    <img src="Images/WildCircus3.jpg" alt="Picture of one of our project">
+                </article>
+                <article>
+                    <img src="Images/WildCircus4.jpg" alt="Picture of one of our project">
+                </article>
+                <article>
+                    <img src="Images/WildCircus5.jpg" alt="Picture of one of our project">
+                </article>
+                <article>
+                    <img src="Images/WildCircus6.jpg" alt="Picture of one of our project">
+                </article>
+            </div>
+
+        </section>
         <!--SECTION SLIDESHOW OUR VALUES /// MARGAUX-->
         <section id="our-values">
             <h2>Our Values</h2>
@@ -66,27 +120,7 @@
                 </article>
             </div>    
         </section>
-        <!--SECTION WHAT WE DO /// VALENTIN-->
-        <section id="what-we-do">
-            <h2>What we do</h2>
-
-            <ul class="wwd-container">
-                <li class="wwd-item">
-                    <article><h3 class="wwd-title">Web</h3>
-                    <img class="wwd-img" src="Images/coding.png" alt="a desktop with a plant">
-                    <p>A multidisciplinary and committed team to offer you that little extra that makes the difference. Thanks to the integration of all the components of creation, the communications agency La Confection has every legitimacy to become your most precious support.</p></article></li>
-
-                <li class="wwd-item">
-                    <article><h3 class="wwd-title">Print</h3>
-                    <img class="wwd-img" src="Images/flyer.png" alt="a flyer with a plant">
-                    <p>Promoting your image means highlighting your difference and giving meaning to your projects. The creative work should not be limited to the search for a simple aesthetic dress but must above all meet specific criteria in terms of reading, visual ergonomics and understanding to create links with your customers.</p></article></li>
-
-                <li class="wwd-item">
-                    <article><h3 class="wwd-title">Marking campaigns</h3>
-                    <img class="wwd-img" src="Images/marketing.png" alt="a card with a plant">
-                    <p>Communication strategy, digital and printed communication, brand content through video, e-marketing, we like to cultivate our gray matter.</p></article></li>
-            </ul>
-        </section>
+       
 
     <!-- Form RoxaneDrelon -->
 
