add link into some projects section

--- a/index.html
+++ b/index.html
@@ -59,22 +59,22 @@
             <h2>Some Projects</h2>
             <div class="projects-container">
                 <article>
-                    <img src="Images/WildCircus1.jpg" alt="Picture of one of our project">
+                    <a href="https://codepen.io/Temporare/pen/vYYNyMM" target="_blank"><img src="Images/WildCircus1.jpg" alt="Picture of one of our project"></a>
                 </article>
                 <article>
-                    <img src="Images/WildCircus2.jpg" alt="Picture of one of our project">
+                    <a href="https://codepen.io/liolo/pen/orMxzG" target="_blank"><img src="Images/WildCircus2.jpg" alt="Picture of one of our project"></a>
                 </article>
                 <article>
-                    <img src="Images/WildCircus3.jpg" alt="Picture of one of our project">
+                    <a href="https://github.com/YannYves/Wild-Circus-template" target="_blank"><img src="Images/WildCircus3.jpg" alt="Picture of one of our project"></a>
                 </article>
                 <article>
-                    <img src="Images/WildCircus4.jpg" alt="Picture of one of our project">
+                    <a href="https://codepen.io/ValentinV3/pen/KKweBKJ" target="_blank"><img src="Images/WildCircus4.jpg" alt="Picture of one of our project"></a>
                 </article>
                 <article>
-                    <img src="Images/WildCircus5.jpg" alt="Picture of one of our project">
+                    <a href="https://codepen.io/magb7/pen/YzPbNEe?editors=1100" target="_blank"><img src="Images/WildCircus5.jpg" alt="Picture of one of our project"></a>
                 </article>
                 <article>
-                    <img src="Images/WildCircus6.jpg" alt="Picture of one of our project">
+                   <a href="https://codepen.io/Pikss/pen/WWEgez"><img src="Images/WildCircus6.jpg" alt="Picture of one of our project"></a>
                 </article>
             </div>
 
