translate p in our values section

--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
                         <img src="Images/slideshow1.jpg" alt="Leaves">
                     </div>
                     <div class="text-container">
-                        <h3>Eco conception</h3>
+                        <h3>Eco-design</h3>
                         <p>
-                            L'éco-conception consiste à prendre en compte l'impact environnemental de ses réalisations de l'idée jusqu'à la tombe.
+                            Eco-design consists in taking into account the environmental impact of its achievements from the idea to the grave.
                         </p>
                     </div>
                 </article>
@@ -102,7 +102,7 @@
                     <div class="text-container">
                         <h3>Commitment</h3>
                         <p>
-                            We work with partners who share the same values. 
+                            At Yellowgreen we are committed to working with partners who share the same values. This is why all our partners use water-based inks and recycled paper.
                         </p>
                     </div>
                 </article>
@@ -114,7 +114,7 @@
                     <div class="text-container">
                         <h3>Co-design</h3>
                         <p>
-                            Pour que vous soyez tout à fait à l’aise avec l’image de votre projet, prenons du temps pour poser les choses à plat et faire fuser les idées !
+                            So that you are completely comfortable with the image of your project, let's take some time to put things flat and get ideas out !
                         </p>
                     </div>
                 </article>
