--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
     </header>
     <nav>
         <ul class="ulheader">
-            <li class="liheader">Ours Values</li>
-            <li class="liheader">Contact Us</li>
-            <li class="liheader">About Us</li>
+            <li class="liheader"><a href="#what-we-do">What we do</a></li>
+            <li class="liheader"><a href="#">Our Project</a></li>
+            <li class="liheader"><a href="#our-values">Our Values</a></li>
+            <li class="liheader"><a href="#formulaire">Contact us</a></li>
+            <li class="liheader"><a href="#about-us">About us</a>
+            <li class="liheader"><a href="#">Meet our team</a>
         </ul>
     </nav>
     <main>
