--- a/index.html
+++ b/index.html
@@ -189,11 +189,11 @@
                         <li><a href="#">Legal mention</a></li>
                     </ul>
                 </li>
-                    <li>
-                        <ul>
-                            <li class="spanY2"><a href="#">Y</a></li>
-                        </ul>
-                    </li>
+                <li>
+                    <ul>
+                        <li id="spanY2"><a href="#" class=".rotate-vert-center">Y</a></li>
+                    </ul>
+                </li>
             </ul>
         </div>  
     </footer>
