add linkedin's link of every profile

--- a/index.html
+++ b/index.html
@@ -174,10 +174,14 @@
             </iframe>
         <!-- Fin iframe Map-->
             <div class="aboutbox">
-                <div><img src="Images/pin.png"alt="pin"> Our location</div>
-                    <p>4 avenue des saules 59160 Lomme-Lille</p>
-                <div><img src="Images/phone.png" alt="phone"> Our phone</div>
-                    <p>+33 34 56 78 90</p>
+                <div>
+                    <img src="Images/pin.png"alt="pin"> Our location
+                </div>
+                <p>4 avenue des saules 59160 Lomme-Lille</p>
+                <div>
+                    <img src="Images/phone.png" alt="phone"> Our phone
+                </div>
+                <p>+33 34 56 78 90</p>
             </div>
         </div>
         <h2>Meet our team</h2>
@@ -185,30 +189,54 @@
             
             <div class="team">
                 <img src="Images/liora.png" alt="Liora">
-                <p><img src="Images/linkedin.png" alt="linkedin">Liora</p>
+                <p>
+                    <img src="Images/linkedin.png" alt="linkedin">
+                    <a href="https://www.linkedin.com/in/liora-loche-3bb2a0a9/" target="_blank">Liora
+                    </a>
+                </p>
             </div>
             <div class="team">
                 <img src="Images/margaux.png" alt="Margaux">
-                <p><img src="Images/linkedin.png" alt="linkedin">Margaux</p>
+                <p>
+                    <img src="Images/linkedin.png" alt="linkedin">
+                    <a href="https://www.linkedin.com/in/margaux-bédu/" target="_blank">Margaux
+                    </a>
+                </p>
             </div>
             <div class="team">
                 <img src="Images/maxime.png" alt="Maxime">
-                <p><img src="Images/linkedin.png" alt="linkedin">Maxime</p>
+                <p><img src="Images/linkedin.png" alt="linkedin">
+                    <a href="https://www.linkedin.com/in/maxime-rawinski-2858218b/" target="_blank">Maxime
+                    </a>
+                </p>
             </div>
             <div class="team">
                 <img src="Images/roxane.png" alt="Roxane">
-                <p><img src="Images/linkedin.png" alt="linkedin">Roxane</p>
+                <p>
+                    <img src="Images/linkedin.png" alt="linkedin">
+                    <a href="https://www.linkedin.com/in/roxane-drelon-956371162/" target="_blank">Roxane
+                    </a>
+                </p>
             </div>
             <div class="team">
                 <img src="Images/valentin.png" alt="Valentin">
-                <p><img src="Images/linkedin.png" alt="linkedin">Valentin </p>
+                <p>
+                    <img src="Images/linkedin.png" alt="linkedin">
+                    <a href="https://www.linkedin.com/in/valentin-vantroys-6a214463/" target="_blank">Valentin
+                    </a>
+                </p>
             </div>
             <div class="team">
                 <img src="Images/yann.png" alt="Yann">
-                <p><img src="Images/linkedin.png" alt="linkedin">Yann</p>
+                <p>
+                    <img src="Images/linkedin.png" alt="linkedin">
+                    <a href="https://www.linkedin.com/in/yann-dubois-88665992/" target="_blank">Yann
+                    </a>
+                </p>
             </div>
         </div>
     </section>
+
     <footer>
         </div>
         <div class="footer">
