switch our-values and some projects and add update fonts link

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- reset.css cancels browser's default CSS" -->
     <link rel="stylesheet" href="style.css">
     <!--Pacifico font h1 h2 /Oswald regular-->
-    <link href="https://fonts.googleapis.com/css?family=Oswald|Pacifico&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Oswald:300,400,700|Pacifico&display=swap" rel="stylesheet">
     <title>YellowGreen</title>
 </head>
 
@@ -61,32 +61,6 @@
 
         <hr>
 
-        <section id="some-projects">
-            <h2>Some Projects</h2>
-            <div class="projects-container">
-                <article>
-                    <a href="https://codepen.io/Temporare/pen/vYYNyMM" target="_blank"><img src="Images/WildCircus1.jpg" alt="Picture of one of our project"></a>
-                </article>
-                <article>
-                    <a href="https://codepen.io/liolo/pen/orMxzG" target="_blank"><img src="Images/WildCircus2.jpg" alt="Picture of one of our project"></a>
-                </article>
-                <article>
-                    <a href="https://github.com/YannYves/Wild-Circus-template" target="_blank"><img src="Images/WildCircus3.jpg" alt="Picture of one of our project"></a>
-                </article>
-                <article>
-                    <a href="https://codepen.io/ValentinV3/pen/KKweBKJ" target="_blank"><img src="Images/WildCircus4.jpg" alt="Picture of one of our project"></a>
-                </article>
-                <article>
-                    <a href="https://codepen.io/magb7/pen/YzPbNEe?editors=1100" target="_blank"><img src="Images/WildCircus5.jpg" alt="Picture of one of our project"></a>
-                </article>
-                <article>
-                   <a href="https://codepen.io/Pikss/pen/WWEgez"><img src="Images/WildCircus6.jpg" alt="Picture of one of our project"></a>
-                </article>
-            </div>
-        </section>
-
-        <hr>
-
         <!--SECTION SLIDESHOW OUR VALUES /// MARGAUX-->
         <section id="our-values">
             <h2>Our Values</h2>
@@ -127,6 +101,33 @@
                     </div>
                 </article>
             </div>    
+        </section>
+
+        <hr>
+
+         <!-- SOME PROJECTS -->
+         <section id="some-projects">
+            <h2>Some Projects</h2>
+            <div class="projects-container">
+                <article>
+                    <a href="https://codepen.io/Temporare/pen/vYYNyMM" target="_blank"><img src="Images/WildCircus1.jpg" alt="Picture of one of our project"></a>
+                </article>
+                <article>
+                    <a href="https://codepen.io/liolo/pen/orMxzG" target="_blank"><img src="Images/WildCircus2.jpg" alt="Picture of one of our project"></a>
+                </article>
+                <article>
+                    <a href="https://github.com/YannYves/Wild-Circus-template" target="_blank"><img src="Images/WildCircus3.jpg" alt="Picture of one of our project"></a>
+                </article>
+                <article>
+                    <a href="https://codepen.io/ValentinV3/pen/KKweBKJ" target="_blank"><img src="Images/WildCircus4.jpg" alt="Picture of one of our project"></a>
+                </article>
+                <article>
+                    <a href="https://codepen.io/magb7/pen/YzPbNEe?editors=1100" target="_blank"><img src="Images/WildCircus5.jpg" alt="Picture of one of our project"></a>
+                </article>
+                <article>
+                   <a href="https://codepen.io/Pikss/pen/WWEgez"><img src="Images/WildCircus6.jpg" alt="Picture of one of our project"></a>
+                </article>
+            </div>
         </section>
 
         <!--Form RoxaneDrelon--> 
